<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="30dp">

    <android.support.constraint.Guideline
      android:id="@+id/line"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
      android:id="@+id/line2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="50dp" />

    <TextView
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/registration_your_name"
      android:textColor="@color/colorBlackLight"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_name_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/registration_your_name_description"
      android:textSize="12sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <EditText
      android:id="@+id/et_name"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="8dp"
      android:background="@color/colorInputField"
      android:gravity="center_horizontal|center_vertical"
      android:hint="@string/user_profile_name"
      android:inputType="text"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:textSize="14sp"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_name_description"
      app:layout_constraintWidth_default="spread" />

    <TextView
      android:id="@+id/tv_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/registration_phone_number"
      android:textColor="@color/colorBlackLight"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
      android:id="@+id/tv_phone_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/registration_phone_number_description"
      android:textSize="12sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <EditText
      android:id="@+id/et_phone"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="8dp"
      android:background="@color/colorInputField"
      android:gravity="center_horizontal|center_vertical"
      android:hint="@string/registration_phone_number_hint"
      android:inputType="text"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:textSize="14sp"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_phone_description"
      app:layout_constraintWidth_default="spread" />

    <TextView
      android:id="@+id/tv_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/registration_email"
      android:textColor="@color/colorBlackLight"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <TextView
      android:id="@+id/tv_email_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/registration_required_field"
      android:textSize="12sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <EditText
      android:id="@+id/et_email"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="8dp"
      android:background="@color/colorInputField"
      android:gravity="center_horizontal|center_vertical"
      android:hint="@string/user_edit_profile_email_hint"
      android:inputType="text"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:textSize="14sp"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_email_description"
      app:layout_constraintWidth_default="spread" />

    <Button
      android:id="@+id/btn_save"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginRight="20dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/background_button"
      android:text="@string/user_edit_btn_save"
      android:textColor="@color/colorWhite"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_email" />


  </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>

