<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/tvPasswordFieldText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/current_field_password"
      android:textColor="@color/colorLightGray"
      android:textSize="16sp"
      android:layout_marginLeft="20dp"
      />

  <EditText
      android:id="@+id/etPasswordFieldText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvPasswordFieldText"
      android:layout_marginTop="16dp"
      android:padding="5dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorInputField"
      android:ems="10"
      android:inputType="textPassword"
      />

  <TextView
      android:id="@+id/tvNewPasswordFieldText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etPasswordFieldText"
      android:layout_marginTop="16dp"
      android:textColor="@color/colorLightGray"
      android:textSize="16sp"
      android:text="@string/new_field_password"
      android:layout_marginLeft="20dp"
      />

  <EditText
      android:id="@+id/etNewPasswordField"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvNewPasswordFieldText"
      android:layout_marginTop="16dp"
      android:padding="5dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorInputField"
      android:ems="10"
      android:inputType="textPassword"
      />

  <TextView
      android:id="@+id/tvConfirmPasswordFieldText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etNewPasswordField"
      android:layout_marginTop="16dp"
      android:textColor="@color/colorLightGray"
      android:textSize="16sp"
      android:text="@string/confirm_field_password"
      android:layout_marginLeft="20dp"
      />

  <EditText
      android:id="@+id/etConfirmPasswordFieldText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvConfirmPasswordFieldText"
      android:layout_marginTop="16dp"
      android:padding="5dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorInputField"
      android:ems="10"
      android:inputType="textPassword"
      />

  <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
      android:id="@+id/btnSave"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?colorAccent"
      android:layout_centerHorizontal="true"
      app:spinning_bar_padding="10dp"
      app:spinning_bar_color="@color/colorWhite"
      app:spinning_bar_width="2dp"
      app:initialCornerAngle="0dp"
      app:finalCornerAngle="50dp"
      android:textSize="14sp"
      android:text="@string/button_save"
      android:textColor="@color/colorWhite"
      android:layout_below="@+id/etConfirmPasswordFieldText"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="32dp"
      />
</RelativeLayout>