<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".logic.authorization.activities.ModuleSignInActivity"
    >

  <android.support.constraint.Guideline
      android:id="@+id/line"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="20dp"
      tools:layout_editor_absoluteX="20dp"
      tools:layout_editor_absoluteY="0dp"
      />

  <android.support.constraint.Guideline
      android:id="@+id/line2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="50dp"
      tools:layout_editor_absoluteX="334dp"
      tools:layout_editor_absoluteY="0dp"
      />

  <TextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/sign_in_title"
      android:textColor="@color/colorBlack"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/tv_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sign_in_description"
      android:textSize="12sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toBottomOf="@+id/tv_title"
      />

  <EditText
      android:id="@+id/et_login"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="30dp"
      android:background="@color/colorInputField"
      android:gravity="center_horizontal|center_vertical"
      android:hint="@string/sign_in_hint"
      android:inputType="text"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:textSize="14sp"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_description"
      app:layout_constraintWidth_default="spread"
      />


  <EditText
      android:id="@+id/et_password"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="30dp"
      android:background="@color/colorInputField"
      android:gravity="center_horizontal|center_vertical"
      android:hint="@string/sign_in_password"
      android:inputType="textPassword"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:textSize="14sp"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_login"
      app:layout_constraintWidth_default="spread"
      />

  <TextView
      android:id="@+id/tv_registration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/sign_in_registration_message"
      android:textColor="@color/colorBlack"
      android:textSize="14sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_password"
      />

  <TextView
      android:id="@+id/tv_recovery_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/sign_in_recovery_message"
      android:textColor="@color/colorBlack"
      android:textSize="14sp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_password"
      />

  <RelativeLayout
      android:id="@+id/container_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_registration"
      >

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="?colorAccent"
        android:text="@string/sign_in_button_name"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="0dp"
        app:spinning_bar_color="@color/colorWhite"
        app:spinning_bar_padding="10dp"
        app:spinning_bar_width="2dp"
        />

  </RelativeLayout>


  <TextView
      android:id="@+id/text_or"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="Или"
      android:textColor="@color/colorBlack"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/container_btn"
      />

  <com.facebook.login.widget.LoginButton
      android:id="@+id/facebook_login_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginEnd="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:paddingBottom="13dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:paddingTop="13dp"
      android:text="Войти с Facebook"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_or"
      />

  <com.google.android.gms.common.SignInButton
      android:id="@+id/google_login_button"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginEnd="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:gravity="center_vertical|center_horizontal"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/facebook_login_button"
      />

</android.support.constraint.ConstraintLayout>