<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorWhite"
  android:clickable="true">

  <RelativeLayout
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tvNewPasswordFieldText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="16dp"
      android:text="@string/new_field_password"
      android:textColor="@color/colorLightGray"
      android:textSize="16sp" />

    <com.apps.twelve.floor.authorization.base.NoChangeBackgroundTextInputLayout
      android:id="@+id/til_new_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvNewPasswordFieldText"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      app:errorEnabled="true"
      app:hintEnabled="false">

      <EditText
        android:id="@+id/etNewPasswordField"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorInputField"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/registration_hint_password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    </com.apps.twelve.floor.authorization.base.NoChangeBackgroundTextInputLayout>

    <TextView
      android:id="@+id/tvConfirmPasswordFieldText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/til_new_password"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="16dp"
      android:text="@string/confirm_field_password"
      android:textColor="@color/colorLightGray"
      android:textSize="16sp" />

    <com.apps.twelve.floor.authorization.base.NoChangeBackgroundTextInputLayout
      android:id="@+id/til_confirm_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvConfirmPasswordFieldText"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      app:errorEnabled="true"
      app:hintEnabled="false">

      <EditText
        android:id="@+id/etConfirmPasswordFieldText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorInputField"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/registration_hint_password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    </com.apps.twelve.floor.authorization.base.NoChangeBackgroundTextInputLayout>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
      android:id="@+id/btnSave"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/til_confirm_password"
      android:layout_centerHorizontal="true"
      android:layout_marginEnd="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:background="?colorAccent"
      android:text="@string/button_save"
      android:textColor="@color/colorWhite"
      android:textSize="14sp"
      app:finalCornerAngle="50dp"
      app:initialCornerAngle="0dp"
      app:spinning_bar_color="@color/colorWhite"
      app:spinning_bar_padding="10dp"
      app:spinning_bar_width="2dp" />
  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
