<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorWhite">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:id="@+id/root_layout">

    <android.support.constraint.Guideline
      android:id="@+id/line"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
      android:id="@+id/line2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="50dp" />

    <TextView
      android:id="@+id/tv_email_or_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/delete_account_current_password"
      android:textColor="@color/colorBlackLight"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintTop_toTopOf="parent" />

    <com.apps.twelve.floor.authorization.base.NoChangeBackgroundTextInputLayout
      android:id="@+id/til_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      app:errorEnabled="true"
      app:hintEnabled="false"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintLeft_toLeftOf="@+id/line"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_email_or_phone"
      app:errorTextAppearance="@style/error"
      app:layout_constraintWidth_default="spread">

      <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorInputField"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/registration_hint_password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    </com.apps.twelve.floor.authorization.base.NoChangeBackgroundTextInputLayout>

    <RelativeLayout
      android:id="@+id/container_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/til_password">

      <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="?colorAccent"
        android:text="@string/delete_account"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="0dp"
        app:spinning_bar_color="@color/colorWhite"
        app:spinning_bar_padding="10dp"
        app:spinning_bar_width="2dp" />

    </RelativeLayout>


  </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>

